fixed the image a little it's squish
let's try this again.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,8 +54,8 @@ p {
 	margin: 25px;
 }
 .headshot img {
-	height:20px;
-	width: 100%;
+	height:50px;
+	max-width: 100%;
 	border-radius: 50%;
 	transition: transform 0.5s ease;
 	transform: scale(0.8);
